--- a/catalog.html
+++ b/catalog.html
@@ -22,11 +22,12 @@
       <div class="container">
 
         <div class="header-navigation">
-          <a class="main-header-logo" href="/">
+          <a class="main-header-logo" href="index.html">
             <img src="img/logo.svg" alt="Логотип Техномарт" width="108" height="17">
           </a>
           <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
-            <input type="search" name="search" placeholder="Поиск:">
+            <label class="visually-hidden" for="search-form">Форма поиска</label>
+            <input id="search-form" type="search" name="search" placeholder="Поиск:">
           </form>
 
           <div class="header-link">
@@ -59,7 +60,7 @@
 
         <div class="user-navigation">
           <div class="user-navigation-link">
-            <a class="user-name" href="#">Равшан Джамшутович </a>
+            <a class="user-name" href="#">Равшан Джамшутович</a>
             <a class="user-navigation-logout" href="#"><span class="visually-hidden">Выход</span></a>
           </div>
           <ul class="user-navigation-list">
@@ -86,7 +87,6 @@
   <main>
     <div class="catalog-page container">
 
-
       <ul class="breadcrumbs-list">
         <li>
           <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
@@ -102,9 +102,7 @@
         </li>
       </ul>
 
-
       <h1 class="catalog-title">Перфораторы</h1>
-
 
       <div class="filters">
         <span>Фильтр:</span>
@@ -207,7 +205,6 @@
           </div>
         </div>
 
-
         <h2 class="visually-hidden">Список товаров для ремонта</h2>
 
         <ul class="product-list">
@@ -225,7 +222,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
             <!--  <span class="label product-label"></span> -->
           </li>
@@ -244,7 +241,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -262,7 +259,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -280,7 +277,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -298,7 +295,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -315,7 +312,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -333,7 +330,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -351,7 +348,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
 
@@ -368,7 +365,7 @@
             </div>
             <div class="button-item">
               <a class="button-buy" href="#">Купить</a>
-              <button class="button-bookmark" type="submit">В закладки</button>
+              <button class="button-bookmark" type="button">В закладки</button>
             </div>
           </li>
         </ul>
@@ -402,7 +399,7 @@
 
       <div class="main-footer-wrapper">
         <div class="footer-contacts">
-          <a href="/">
+          <a href="index.html">
             <img class="footer-logo" src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
           </a>
           <p>
