--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Интернет-магазин Техномарт</title>
   <meta name="description" content="Интернет-магазин строительных материалов и инструментов для ремонта">
   <meta name="keywords" content="инструменты для ремонта, перфораторы, строительные материалы">
-  <link href="/img/icon-mark.svg" type="image/png" rel="shortcut icon">
+  <link href="img/icon-mark.svg" type="image/png" rel="shortcut icon">
   <link
     href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap"
     rel="stylesheet">
